...
            .padding(Padding.medium)
    }

    func viewingInactiveConversation() -> some View {
        return InformationView(
            viewType: .info,
            title: "This conversation has been closed",
            message: "Go to your active conversation to send a message."
        ).padding(Padding.medium)
    }

    func expiredKeysMessage(recipient: JournalistData) -> some View {
        return InformationView(
...
            )
            .padding([.horizontal], Padding.medium)
            TextEditor(text: $conversationViewModel.message)
                .style(ComposeMessageTextStyle())
                .frame(minHeight: 60, maxHeight: 80)
                .padding(Padding.medium)
                .accessibilityLabel("Compose your message")

            Button("Send") {
                Task {
                    try? await conversationViewModel.sendMessage()
                    conversationViewModel.clearMessage()
                    self.alreadySentMessage = false
...
