...
Messages must be infrequent to keep “cover” effective without increasing data use. That’s why only one conversation is allowed at a time. This also helps prevent spam and abuse.

DIVIDER

### How do I choose to speak with a different journalist or team?

There are two ways to do this. You can delete your old conversation to pick someone new to correspond with. This retains your current passphrase. Or you can choose to 'Get started' from the first Secure Messaging page, and set up a new message vault with a new passphrase.

DIVIDER

## Troubleshooting / technical

### How do I report a technical problem?
...
